(fix) O3-2870: Quickfix for nav button vertical alignmet

--- a/projects/ngx-formentry/src/form-entry/form-renderer/form-renderer.component.scss
+++ b/projects/ngx-formentry/src/form-entry/form-renderer/form-renderer.component.scss
@@ -11,6 +11,7 @@
   max-width: 50%;
   min-width: 50%;
   padding-block: spacing.$spacing-02;
+  align-items: center;
 }
 
 .nav-link {
